// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputLabel ACT theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-16qpkd4-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ACT_ET theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-pzt7o5-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-knsxxh-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-1rv6e9g-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;

exports[`InputLabel ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <label
    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated css-1eutqf0-MuiFormLabel-root-MuiInputLabel-root"
  >
    <div
      class="label-split"
    >
      <span
        class="label-help"
      >
        InputLabel
      </span>
      <span
        class="required"
      >
        Required
      </span>
    </div>
  </label>
</div>
`;
